# get_anime_bot_rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yaml  justfile
src/: application.rs  config.rs  domain.rs  extractors.rs  filters.rs  handlers.rs  infrastructure.rs  main.rs  middlewares.rs
src/application/: media_parser.rs  source.rs
src/application/common/: exceptions.rs  traits.rs
src/application/common/traits/: uow.rs
src/application/media/: dto.rs  exceptions.rs  traits.rs
src/application/media/dto/: create.rs  get_by_id.rs  get_by_info.rs  get_by_info_unviewed_by_user.rs  get_by_url.rs
src/application/media/traits/: reader.rs  repo.rs
src/application/media_parser/: exceptions.rs  traits.rs
src/application/media_parser/traits/: media_source.rs  source.rs  worker.rs
src/application/source/: dto.rs  exceptions.rs  traits.rs
src/application/source/dto/: create.rs  get_by_id.rs  get_by_name.rs  get_by_name_and_url.rs
src/application/source/traits/: reader.rs  repo.rs
src/application/user/: dto.rs  exceptions.rs  traits.rs
src/application/user/dto/: create.rs  get_by_id.rs  get_by_tg_id.rs  update_language_code.rs  update_show_nsfw.rs  user.rs
src/application/user/traits/: reader.rs  repo.rs
src/application/user_media_view/: dto.rs  exceptions.rs  traits.rs
src/application/user_media_view/dto/: create.rs  get_by_id.rs  get_by_media_age_restriction.rs  get_by_media_genre.rs  get_by_media_id.rs  get_by_media_source_id.rs  get_by_media_type.rs  get_by_user_id.rs  get_by_user_tg_id.rs
src/application/user_media_view/traits/: reader.rs  repo.rs
src/domain/: media_parser.rs
src/domain/common/: exceptions.rs
src/domain/media/: entities.rs
src/domain/media/entities/: genre.rs  genre_stats.rs  genres.rs  genres_stats.rs  media.rs  media_stats.rs
src/domain/media/value_objects/: age_restriction.rs  genre_name.rs  media_type.rs
src/domain/media_parser/: exceptions.rs  value_objects.rs
src/domain/media_parser/entities/: genre.rs  genres.rs  media.rs
src/domain/media_parser/value_objects/: age_restriction.rs  genre_name.rs  media_type.rs  media_url.rs
src/domain/source/: entities.rs
src/domain/source/entities/: source.rs
src/domain/user/entities/: user.rs
src/domain/user_media_view/: entities.rs
src/domain/user_media_view/entities/: user_media_view.rs
src/extractors/: db_user.rs  media_parser_sources.rs  uow.rs  uow_factory.rs
src/filters/: is_unknown_user.rs
src/handlers/: media.rs  source.rs  start.rs  stats.rs  user.rs
src/infrastructure/: database.rs  media_parser.rs
src/infrastructure/database/: models.rs  repositories.rs  uow.rs
src/infrastructure/media_parser/: nekos_best.rs  nekos_fun.rs  waifu_pics.rs  worker.rs
src/middlewares/: acl.rs  database.rs  media_parser_sources.rs
(+13 files in other folders)
