[package]
name = "get_anime_bot_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
telers = { git = "https://github.com/Desiders/telers", rev = "ffddb58" }
tokio = { version = "1.28", features = [
    "macros",
    "sync",
] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "time",
] }
uuid = { version = "1.3", features = [
    "v4", "fast-rng",
] }
serde = { version = "1.0", features = ["derive"] }
sea-query-binder = { version = "0.5", features = [
    "sqlx-postgres",
    "with-uuid",
] }
sea-query = "0.30"
reqwest = "0.11"
serde_json = "1.0"
backoff = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 
thiserror = "1.0"
anyhow = "1.0"
time = "0.3"
async-trait = "0.1"
lazy_static = "1.4"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
